# opencode-otel-observability

./: .gitignore  LICENSE  Makefile  README.md  collector-config.yaml  docker-compose.yml  grafana-datasources.yml  justfile  mkdocs.yml  opencode-dashboard.json  tempo.yaml
.github/profile/: README.md
.github/workflows/: docs.yml
docs/: architecture.md  configuration.md  dashboard-plan.md  dashboard.md  development.md  index.md  quick-start.md  telemetry.md  trace-explorer.md
scripts/: check-otel-plugin.sh  setup.sh
session-dashboard/: Dockerfile  app.py  narrative.py  pyproject.toml  requirements.txt  tempo_client.py
session-dashboard/assets/: style.css
trace-explorer/: .dockerignore  Dockerfile  ui_todo.md
trace-explorer/backend/: CODING_STYLE.md  main.py  models.py  pyproject.toml  tempo.py
trace-explorer/frontend/: .gitignore  README.md  package-lock.json  package.json  shot.mjs  shot2.mjs  shot3.mjs  shot4.mjs  shot5.mjs  shot6.mjs  shot7.mjs  shot8.mjs  vite.config.ts
trace-explorer/frontend/src/: App.tsx  api.ts  format.ts  hooks.ts  index.css  search.ts  types.ts
trace-explorer/frontend/src/components/: Charts.tsx  Highlight.tsx  JsonTree.tsx  OverviewView.tsx  SessionList.tsx  SessionStats.tsx  SessionStatsPanel.tsx  SmartValue.tsx  SpanDetailPanel.tsx  SummaryCard.tsx  ToggleButton.tsx  Waterfall.tsx
