[project]
name = "trace-explorer-backend"
version = "0.1.0"
description = "FastAPI backend serving Tempo trace data for the Trace Explorer UI"
requires-python = ">=3.12,<3.13"
dependencies = [
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "fastapi>=0.137.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1a10",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "A",   # flake8-builtins (catches shadowing of builtins like `range`)
    "D1",  # pydocstyle: missing docstrings
    "RUF", # ruff-specific rules
]
ignore = [
    "B006", # mutable default args -- not used here but commonly noisy
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["models", "tempo"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
